include/v8/dss_capi.h

    DSS_CAPI_V8_DLL void DSS_NewCircuit(char* Value);
    /*
    Number of Circuits currently defined
    */
    DSS_CAPI_V8_DLL int32_t DSS_Get_NumCircuits(void);
    DSS_CAPI_V8_DLL void DSS_ClearAll(void);
    /*
    Get version string for the DSS.
    */
    DSS_CAPI_V8_DLL char* DSS_Get_Version(void);
    DSS_CAPI_V8_DLL uint16_t DSS_Start(int32_t code);
    /*
    List of DSS intrinsic classes (names of the classes)
    */
    DSS_CAPI_V8_DLL void DSS_Get_Classes(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as DSS_Get_Classes but using the global buffer interface for results
    */
    DSS_CAPI_V8_DLL void DSS_Get_Classes_GR(void);
    /*
    List of user-defined classes
    */
    DSS_CAPI_V8_DLL void DSS_Get_UserClasses(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as DSS_Get_UserClasses but using the global buffer interface for results
    */
    DSS_CAPI_V8_DLL void DSS_Get_UserClasses_GR(void);
    /*
    Number of DSS intrinsic classes
    */
    DSS_CAPI_V8_DLL int32_t DSS_Get_NumClasses(void);
    /*
    Number of user-defined classes
    */
    DSS_CAPI_V8_DLL int32_t DSS_Get_NumUserClasses(void);
    /*
    DSS Data File Path.  Default path for reports, etc. from DSS
    */
    DSS_CAPI_V8_DLL char* DSS_Get_DataPath(void);
    /*
    DSS Data File Path.  Default path for reports, etc. from DSS
    */
    DSS_CAPI_V8_DLL void DSS_Set_DataPath(char* Value);
    DSS_CAPI_V8_DLL void DSS_Reset(void);
    /*
    Returns the path name for the default text editor.
    */
    DSS_CAPI_V8_DLL char* DSS_Get_DefaultEditor(void);
    DSS_CAPI_V8_DLL int32_t DSS_SetActiveClass(char* ClassName);
    DSS_CAPI_V8_DLL uint16_t DSS_Get_AllowForms(void);
    DSS_CAPI_V8_DLL void DSS_Set_AllowForms(uint16_t Value);
    /*
    Sets/gets the AllowEditor mode.

    AllowEditor controls whether the external editor is used in commands like "Show".
    If you set to 0 (false), the editor is not executed. Note that other side effects,
    such as the creation of files, are not affected.
    */
    DSS_CAPI_V8_DLL uint16_t DSS_Get_AllowEditor(void);
    DSS_CAPI_V8_DLL void DSS_Set_AllowEditor(uint16_t Value);